--- a/project64ph579kahdyh7/main.html
+++ b/project64ph579kahdyh7/main.html
@@ -36,7 +36,7 @@
     <br>
     <br>
     <br>
-<a href="Ensayo historia fase 2h (1).pdf">Key activity  phase 2 </a>
+<a href="Ensayo historia fase 2h (1).pdf"><h1>Key activity  phase 2 </h1></a>
     <br>
     <br>
     <br>
