--- a/projecthjdebdh6hssh/main.html
+++ b/projecthjdebdh6hssh/main.html
@@ -1,1 +1,58 @@
 
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Files2Files</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="container header-content">
+            <h1>Files2Files</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+
+    <h1>uploaded apr 1</h1>
+<img src="IMG_2280.jpeg">
+ <img src="IMG_2281.jpeg">
+  <img src="IMG_2282.jpeg">
+  <img src="IMG_2283.jpeg">
+  <img src="IMG_2284.jpeg">
+  <img src="IMG_2285.jpeg">
+
+
+
+
+  
+
+    <main>
+        <section class="hero">
+            <div class="container hero-content">
+                <h2>Easy & Secure File Transfers</h2>
+                <p>Transfer your files with utmost security and simplicity. Join Files2Files today.</p>
+                <a href="#join" class="cta-button">Get Started</a>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container footer-content">
+            <p>&copy; 2024 Files2Files. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
+</html>
+
+
