--- a/projecthjdebdh6hssh/main.html
+++ b/projecthjdebdh6hssh/main.html
@@ -25,12 +25,8 @@
 
 
     <h1>uploaded apr 1</h1>
-<img src="IMG_2280.jpeg">
- <img src="IMG_2281.jpeg">
-  <img src="IMG_2282.jpeg">
-  <img src="IMG_2283.jpeg">
-  <img src="IMG_2284.jpeg">
-  <img src="IMG_2285.jpeg">
+
+    <a href="Projecto eje.pdf"> <h1>Projectoeje.pdf</h1> </a>
 
 
 
