--- a/projectukggyugyg/main.html
+++ b/projectukggyugyg/main.html
@@ -33,7 +33,7 @@
     <br>
     <br>
     <br>
-<a href="Yoyelteceje.pdf"><h1>3er avance actividad eje </h1></a>
+<a href="Yoyelteceje.pdf"><h1>>>>>>> 3er avance actividad eje <<<<<<< </h1></a>
     <br>
     <br>
     <br>
