--- a/projecthydwjdhw.html
+++ b/projecthydwjdhw.html
@@ -22,12 +22,14 @@
 
 
     <h1>uploaded 05/09/24 10:59 PM UTC-6</h1>
-<img src="IMG_2280.jpeg">
- <img src="IMG_2281.jpeg">
-  <img src="IMG_2282.jpeg">
-  <img src="IMG_2283.jpeg">
-  <img src="IMG_2284.jpeg">
-  <img src="IMG_2285.jpeg">
+<br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2>Titulo : "Proxenicail"</h2>
 
 
 
