--- a/projectuehgfuy/main.html
+++ b/projectuehgfuy/main.html
@@ -33,7 +33,9 @@
 <br>
     <br>
     <br>
-    <video width="500" height="250" src="">
+    <a href="ruta/al/archivo.pdf" download="nombre-del-archivo.pdf">a01665042wb4green.xlsx</a>
+    <a href="ruta/al/archivo.pdf" download="nombre-del-archivo.pdf">Descargar archivo</a>
+    <a href="ruta/al/archivo.pdf" download="nombre-del-archivo.pdf">Descargar archivo</a>
 
 
 
