--- a/projectuehgfuy/main.html
+++ b/projectuehgfuy/main.html
@@ -33,8 +33,12 @@
 <br>
     <br>
     <br>
-    <a href="ruta/al/archivo.pdf" download="nombre-del-archivo.pdf">a01665042wb4green.xlsx</a>
+    <a href="a01665042wb4green.xlsx" download="a01665042wb4green.xlsx">a01665042wb4green.xlsx</a>
+    <br>
+    <br>
     <a href="ruta/al/archivo.pdf" download="nombre-del-archivo.pdf">Descargar archivo</a>
+    <br>
+    <br>
     <a href="ruta/al/archivo.pdf" download="nombre-del-archivo.pdf">Descargar archivo</a>
 
 
