--- a/projectuehgfuy/main.html
+++ b/projectuehgfuy/main.html
@@ -33,12 +33,19 @@
 <br>
     <br>
     <br>
+    <h3>Jueves 22</h3>
     <a href="a01665042wb4green.xlsx" download="a01665042wb4green.xlsx">a01665042wb4green.xlsx</a>
+     <br>
     <br>
-    <br>
+    <h3>Workbook4green</h3>
     <a href="ruta/al/archivo.pdf" download="nombre-del-archivo.pdf">Descargar archivo</a>
     <br>
     <br>
+    <h3>Martes 27</h3>
+    <a href="ruta/al/archivo.pdf" download="nombre-del-archivo.pdf">Descargar archivo</a>
+    <br>
+    <br>
+    <h3>Jueves 29</h3>
     <a href="ruta/al/archivo.pdf" download="nombre-del-archivo.pdf">Descargar archivo</a>
 
 
