--- a/projectuehgfuy/main.html
+++ b/projectuehgfuy/main.html
@@ -34,11 +34,11 @@
     <br>
     <br>
     <h3>Jueves 22</h3>
-    <a href="a01665042wb4green.xlsx" download="a01665042wb4green.xlsx">a01665042wb4green.xlsx</a>
+    <a href="ruta/al/archivo.pdf" download="nombre-del-archivo.pdf">a01665042_Activity_2 .xlsx</a>
      <br>
     <br>
     <h3>Workbook4green</h3>
-    <a href="ruta/al/archivo.pdf" download="nombre-del-archivo.pdf">Descargar archivo</a>
+   <a href="a01665042wb4green.xlsx" download="a01665042wb4green.xlsx">a01665042wb4green.xlsx</a>
     <br>
     <br>
     <h3>Martes 27</h3>
