--- a/projectuehgfuy/main.html
+++ b/projectuehgfuy/main.html
@@ -34,7 +34,7 @@
     <br>
     <br>
     <h3>Jueves 22</h3>
-    <a href="ruta/al/archivo.pdf" download="nombre-del-archivo.pdf">a01665042_Activity_2 .xlsx</a>
+    <a href="a01665042_Activity_2 .xlsx" download="a01665042_Activity_2 .xlsx">a01665042_Activity_2 .xlsx</a>
      <br>
     <br>
     <h3>Workbook4green</h3>
