--- a/projecthjfdguyryio/main.html
+++ b/projecthjfdguyryio/main.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Files2Files</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="container header-content">
+            <h1>Files2Files</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
+
+    <h1>uploaded 10/09/24 9:32 PM UTC-6</h1>
+<br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2>Titulo : "class 10 bw 5b"</h2>
+<br>
+    <br>
+    <br>
+    <video width="500" height="250" src="">
+
+
+
+  
+
+    <main>
+        <section class="hero">
+            <div class="container hero-content">
+                <h2>Easy & Secure File Transfers</h2>
+                <p>Transfer your files with utmost security and simplicity. Join Files2Files today.</p>
+                <a href="#join" class="cta-button">Get Started</a>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container footer-content">
+            <p>&copy; 2024 Files2Files. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
+</html>
