--- a/projecthjfdguyryio/main.html
+++ b/projecthjfdguyryio/main.html
@@ -33,10 +33,11 @@
 <br>
     <br>
     <br>
-    <video width="500" height="250" src="">
+    <h3>Jueves 27</h3>
+    <a href="a01665042_Activity_2 .xlsx" download="A01665042Workbook 6 Blue.xlsx">A01665042Workbook 6 Blue.xlsx</a>
 
 
-A01665042Workbook 6 Blue.xlsx
+
   
 
     <main>
