--- a/projectuehgfuy/main.html
+++ b/projectuehgfuy/main.html
@@ -42,7 +42,7 @@
     <br>
     <br>
     <h3>Martes 27</h3>
-    <a href="A01664bkue.xlsx.xlsx" download="A01664bkue.xlsx">A01664bkue.xlsx</a>
+    <a href="A01664bkue.xlsx" download="A01664bkue.xlsx">A01664bkue.xlsx</a>
     <br>
     <br>
     <h3>Jueves 29</h3>
