--- a/projectjkshishw/main.html
+++ b/projectjkshishw/main.html
@@ -1,2 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Files2Files</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    
+  <iframe src="https://drive.google.com/file/d/1TUqj_q9il4zo-JZSRG2rEtgyFtvpDJy3/preview" width="640" height="480" allow="autoplay"></iframe>
+  
+  
+  <main>
+        <section class="hero">
+            <div class="container hero-content">
+                <h2>Easy & Secure File Transfers</h2>
+                <p>Transfer your files with utmost security and simplicity. Join Files2Files today.</p>
+                <a href="#join" class="cta-button">Get Started</a>
+            </div>
+        </section>
+    </main>
 
-<iframe src="https://drive.google.com/file/d/1TUqj_q9il4zo-JZSRG2rEtgyFtvpDJy3/preview" width="640" height="480" allow="autoplay"></iframe>
+    <footer>
+        <div class="container footer-content">
+            <p>&copy; 2024 Files2Files. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
+</html>
+
+
