--- a/projectjkshishw/main.html
+++ b/projectjkshishw/main.html
@@ -7,15 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <section class="hero">
-            <div class="container hero-content">
-                <h2>Easy & Secure File Transfers</h2>
-                <p>Transfer your files with utmost security and simplicity. Join Files2Files today.</p>
-                <a href="#join" class="cta-button">Get Started</a>
-            </div>
-        </section>
-    </main>
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Files2Files</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
   <iframe src="https://drive.google.com/file/d/1TUqj_q9il4zo-JZSRG2rEtgyFtvpDJy3/preview" width="640" height="480" allow="autoplay"></iframe>
   
   
