--- a/projectjkshishw/main.html
+++ b/projectjkshishw/main.html
@@ -6,6 +6,26 @@
     <title>Files2Files</title>
     <link rel="stylesheet" href="style.css">
 </head>
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Files2Files</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="container header-content">
+            <h1>Files2Files</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    
     <br>
     <br>
     <h1>Business model</h1>
