--- a/projectkghdhgs/main.html
+++ b/projectkghdhgs/main.html
@@ -5,4 +5,7 @@
     src="https://www.canva.com/design/DAGUQjLkIvw/KTOszJQe9wt9zEyNr4L2IA/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
+
+<iframe src="https://drive.google.com/file/d/1mVM3MmDdwD8tdgtYKaTDl8HSTnn3zvfH/preview" width="640" height="480" allow="autoplay"></iframe>
+
 <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGUQjLkIvw&#x2F;KTOszJQe9wt9zEyNr4L2IA&#x2F;view?utm_content=DAGUQjLkIvw&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Formative Activity 2 - Modeling the World</a> by Erick ismael Gonzalez Bazaldua
