--- a/projectsbhs/main.html
+++ b/projectsbhs/main.html
@@ -7,4 +7,5 @@ zh1> uploaded 09/11/24 21:54 UTC-6 </h1>
     src="https://www.canva.com/design/DAGWJcECPvQ/yCgOOSXYThvIPitMlYptdA/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
+zh1> Use the arrows to see the flip pagea</h1>
 <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGWJcECPvQ&#x2F;yCgOOSXYThvIPitMlYptdA&#x2F;view?utm_content=DAGWJcECPvQ&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Activité multiculturelle_ Faim Zéro (2).pdf</a> by Erick ismael Gonzalez Bazaldua
